@@ -2,6 +2,7 @@ phpSysInfo 3.1.2
 
  - [ADD] Tempsensor and CPU frequency for Raspberry Pi (thanks to hawkeyexp)
  - [ADD] Linaro to detected distros
+ - [ADD] Option for logging of functions executeProgram() and rfts()
  
  - [FIX] Incorrect display of chunk size for the plugin mdstatus for some results
  
